<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hangmanLefeverMichael</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="kies">Select theme</string>
    <string name="dier">Animal</string>
    <string name="fruit">Fruit</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_theme_select">ThemeSelectActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>

</resources>
